Use SearchStrategy instead of SearchEngine with different methods.